# mica-crypto-mcp

./: .cursorrules  .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  glama.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
