[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mica-crypto-mcp"
readme = "README.md"
version = "1.0.7"
description = "Markets in Crypto-Assets (MiCA) Regulation (EU) 2023/1114 compliance for EU crypto-asset issuers, exchanges, custodians, and CASPs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["mica", "crypto", "casp", "eu-crypto", "virtual-assets", "stablecoin", "compliance", "mcp", "mcp-server", "model-context-protocol", "ai-governance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/mica-crypto-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
mica-crypto-mcp = "server:main"
